# worker-mailer-rust

./: .gitignore  Cargo.toml  README.md  README_pt-BR.md
src/: email.rs  errors.rs  lib.rs  logger.rs  mailer.rs  queue.rs  utils.rs
